5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4074/executions/1578_1330.log
== TEST (2019-03-12 11:43:45) 
-- CODE:
print(250/6=round(2)
-- ERROR:
File "XXXX", line 2
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:43:50) 
-- CODE:
print(250/6=round(2)
-- EXECUTION TIME:
0.246995
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    
                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:44:10) 
-- CODE:
print(250/6=round(250/6, 2)
-- EXECUTION TIME:
0.164851
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    
                               ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:44:21) 
-- CODE:
print(250/6=)
-- ERROR:
File "XXXX", line 1
    print(250/6=)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:44:34) 
-- CODE:
print(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:24:50) 
-- CODE:
print(250/6=)
-- ERROR:
File "XXXX", line 1
    print(250/6=)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:25:21) 
-- CODE:
print(250/6=)
round(1, 2)
-- ERROR:
File "XXXX", line 1
    print(250/6=)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:25:25) 
-- CODE:
print(250/6=)
-- EXECUTION TIME:
0.129888
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print(250/6=)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:27:23) 
-- CODE:
print(250/6=round(1, 2))
-- EXECUTION TIME:
0.136106
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print(250/6=round(1, 2))
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:33:48) 
-- CODE:
a = print(250/6)
round(a , 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    round(a , 2)
TypeError: type NoneType doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:48:58) 
-- CODE:
a = print(250/6=round(250/6,2)
-- ERROR:
File "XXXX", line 2
    
                                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:49:06) 
-- CODE:
a = print(250/6=round(250/6,2)
-- EXECUTION TIME:
0.145134
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    
                                  ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:49:17) 
-- CODE:
a = print(250/6=round(41,2)
-- EXECUTION TIME:
0.296217
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    
                               ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:49:40) 
-- CODE:
print(250/6=round(2,2)
-- EXECUTION TIME:
0.147029
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    
                          ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:49:47) 
-- CODE:
print(250/6=round(2,2)
-- ERROR:
File "XXXX", line 2
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:50:43) 
-- CODE:
print(250/6=round(2,2))
-- EXECUTION TIME:
0.198136
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print(250/6=round(2,2))
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:50:50) 
-- CODE:
print(250/6=round(2,2))
-- ERROR:
File "XXXX", line 1
    print(250/6=round(2,2))
         ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:52:24) 
-- CODE:
print(250/6= a
		a=round(2,2))
-- ERROR:
File "XXXX", line 2
    a=round(2,2))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:52:41) 
-- CODE:
print(250/6)
		round(2,2)
-- ERROR:
File "XXXX", line 2
    round(2,2)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:52:45) 
-- CODE:
print(250/6)
		round(2,2)
-- EXECUTION TIME:
0.199933
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    round(2,2)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:53:38) 
-- CODE:
print(250/6)
		round(250/6,2)
-- EXECUTION TIME:
0.141182
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    round(250/6,2)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:54:00) 
-- CODE:
print(250/6)
		round(41,66,2)
-- EXECUTION TIME:
0.151311
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    round(41,66,2)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:54:25) 
-- CODE:
print(250/6=a)
		round(a,2)
-- ERROR:
File "XXXX", line 2
    round(a,2)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:54:26) 
-- CODE:
print(250/6=a)
		round(a,2)
-- EXECUTION TIME:
0.202114
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    round(a,2)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:54:32) 
-- CODE:
print(250/6=a)
		round(a,2)
-- EXECUTION TIME:
0.192684
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    round(a,2)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 13:16:16) 
-- CODE:
print(250/6 = round(41,6666666,2)
-- EXECUTION TIME:
0.18421
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    
                                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 13:16:21) 
-- CODE:
print(250/6 = round(41,6666666,2))
-- EXECUTION TIME:
0.141322
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print(250/6 = round(41,6666666,2))
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 13:16:35) 
-- CODE:
print(250/6 round(41,6666666,2))
-- EXECUTION TIME:
0.16614
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print(250/6 round(41,6666666,2))
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 13:16:44) 
-- CODE:
print(250/6 round(41,666666666666,2))
-- EXECUTION TIME:
0.149439
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print(250/6 round(41,666666666666,2))
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 13:16:54) 
-- CODE:
print(250/6= round(41,666666666666,2))
-- EXECUTION TIME:
0.168721
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print(250/6= round(41,666666666666,2))
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:21:19) 
-- CODE:
print(250//6)
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 13:28:35) 
-- CODE:
print(250/6= float(input('250:6 '))
    print("Arredondado    :", round(2))
-- EXECUTION TIME:
0.137445
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    print("Arredondado    :", round(2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:29:22) 
-- CODE:
print(250/6)
    print("Arredondado    250:6", round(2,2))
-- ERROR:
File "XXXX", line 2
    print("Arredondado    250:6", round(2,2))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 13:29:23) 
-- CODE:
print(250/6)
    print("Arredondado    250:6", round(2,2))
-- EXECUTION TIME:
0.187062
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    print("Arredondado    250:6", round(2,2))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 13:30:04) 
-- CODE:
print(250/6)
    round(=print ,2)
-- EXECUTION TIME:
0.126481
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    round(=print ,2)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 14:18:58) 
-- CODE:
print((round(250/6))
-- ERROR:
File "XXXX", line 2
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 14:19:38) 
-- CODE:
print((round(250/6, 2))
-- EXECUTION TIME:
0.141362
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    
                           ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 14:20:01) 
-- CODE:
print((round( 250/6, 2))
-- EXECUTION TIME:
0.159464
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    
                            ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 14:20:40) 
-- CODE:
print(round(250/6, 2))
-- EXECUTION TIME:
0.190135
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
